--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                 <img src="https://static.igem.wiki/teams/5847/home/14.webp" alt="">
             </div>
         </div>
-        <div class="home-margin4"></div>
 
         <div class="section2">
             <div class="section2-box">
@@ -252,17 +251,107 @@
             </div>
         </div>
 
-        <div class="home-blank"></div>
-
         <div class="section9">
-            <div class="section9-box">
-                <div class="section9-text">
+            <div class="section9-corner section9-topleft">
+                <img src="https://static.igem.wiki/teams/5847/web/01.webp" alt="corner1">
+            </div>
+            <div class="section9-corner section9-topright">
+                <div class="section9-topright-bg">
+                    <img src="https://static.igem.wiki/teams/5847/web/05.webp" alt="bg">
+                </div>
+                <div class="section9-topright-mid">
+                    <img class="section9-midimg1" src="https://static.igem.wiki/teams/5847/web/07.webp" alt="mid1">
+                    <img class="section9-midimg2" src="https://static.igem.wiki/teams/5847/web/07.webp" alt="mid2">
+                </div>
+                <div class="section9-topright-fall">
+                    <img class="section9-fallimg1" src="https://static.igem.wiki/teams/5847/web/04.webp" alt="fall1">
+                    <img class="section9-fallimg2" src="https://static.igem.wiki/teams/5847/web/04.webp" alt="fall2">
+                </div>
+            </div>
+            <div class="section9-corner section9-bottomleft">
+                <div class="section9-droplet"></div>
+            </div>
+            <div class="section9-corner section9-bottomright">
+                <img src="https://static.igem.wiki/teams/5847/web/02.webp" alt="corner2">
+            </div>
+            <div class="section9-centertext">
+                <div class="section9-line1">In your gut, we take the lead, seeking out</div>
+                <div class="section9-line2">breaking down, those lurking microplastics,</div>
+                <div class="section9-line3">turing them into something they're not</div>
+            </div>
+        </div>
+
+
+        <div class="section10">
+            <h1 style="color: aliceblue;">This is a difficult page!</h1>
+        </div>
+
+
+        <div class="section11">
+            <div class="section11-bg"></div>
+            <div class="section11-circle">
+                <span class="section11-centertext">That's what we're all about.</span>
+            </div>
+            <div class="section11-lines">
+                <div class="section11-line1">Eat all the plastic particles that shouldn't be there</div>
+                <div class="section11-line2">and give you a clean, healthy intestinal environment</div>
+                <div class="section11-imgwrap"><img class="section11-img" src="./images/DNA 2.png" alt="clean" /></div>
+            </div>
+        </div>
+
+
+        <div class="section12">
+            <div class="section12-title">Project Profile</div>
+            <div class="section12-cards">
+                <div class="section12-card">
+                    <div class="section12-gif-container">
+                        <img class="section12-gif"
+                            src="https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
+                            alt="gif1">
+                    </div>
+                    <div class="section12-desc">
+                        Description for GIF 1. This is a sample project profile description with more details about the project.
+                    </div>
+                </div>
+                <div class="section12-card">
+                    <div class="section12-gif-container">
+                        <img class="section12-gif"
+                            src="https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
+                            alt="gif2">
+                    </div>
+                    <div class="section12-desc">
+                        Description for GIF 2. This is a sample project profile description with more details about the project.
+                    </div>
+                </div>
+                <div class="section12-card">
+                    <div class="section12-gif-container">
+                        <img class="section12-gif"
+                            src="https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
+                            alt="gif3">
+                    </div>
+                    <div class="section12-desc">
+                        Description for GIF 3. This is a sample project profile description with more details about the project.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="section13">
+            <h1 class="section13-title">Choose "EnteroPlastivore"</h1>
+            <p>You are choosing to vote for a plastic-free future</p>
+        </div>
+        <!-- <div class="home-blank"></div> -->
+
+        <div class="section14">
+            <div class="section14-box">
+                <div class="section14-text">
                     <p>查看我们的presentation video here!</p>
                 </div>
-                <div class="section9-video">
+                <div class="section14-video">
                     <img src="./images/videoBg.png" alt="">
                     <div class="videoBox">
-                        <video width="100%" height="100%" controls>
+                        <video width="100%" height="100%" controls style="border-radius: 20px;">
                             <source src="https://www.bilibili.com/video/BV1Z1421q7DW?t=197.2&p=5" type="video/mp4">
                         </video>
                     </div>
@@ -270,13 +359,13 @@
                 </div>
             </div>
         </div>
+<!-- 
+        <div class="home-blank"></div>
+        <div class="home-blank"></div>
+        <div class="home-blank"></div> -->
 
-        <div class="home-blank"></div>
-        <div class="home-blank"></div>
-        <div class="home-blank"></div>
-
-        <div class="section10">
-            <h1 class="section10-title">Explore our project.</h1>
+        <div class="section15">
+            <h1 class="section15-title">Explore our project.</h1>
             
             <div class="projects-container">
                 <!-- 第一行 -->
@@ -572,11 +661,7 @@
         });  
     </script>
 
-
-
-
-
-
+    <script src="./static/fullpage.js"></script>
 </body>
 
 </html>
