--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@
                 </div>
                 <div class="section6-right" data-aos="fade-left">
                     <img src="./images/enterRight.png" alt="">
-                    <p class="section6-title">"EnteroPlastivore"</p>
                 </div>
+            </div>
+            <div data-aos="fade-up">
+                <p class="section6-title">"EnteroPlastivore"</p>
             </div>
         </div>
 
